# my-heritage

./: .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
heritage/: __main__.py
heritage/cfg/: __init__.py  settings.py
heritage/dto/: __init__.py  state.py
heritage/entity/: __init__.py  button.py  media.py  message.py  user_step.py
heritage/exc/: __init__.py  photo.py
heritage/pkg/: __init__.py  logger.py
heritage/pkg/pastvu/: api.py  conn.py  model.py  models.py
heritage/usecase/: __init__.py  media.py
