[tool.poetry]
name = "my-heritage"
version = "0.1.0"
description = "TG-bot for work with your heritage"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_heritage"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
